KIC-DEMO/lb-demo-3/lb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lb-ingress
  annotations:
    nginx.org/client-max-body-size: "4m"
spec:
  rules:
  - host: lb.192.168.1.80.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: lb
          servicePort: 80
